Update index.html (h2 2 tags)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
   <h1>Atharva Shrusti</h1>
   <h2 style="text-align: center; margin-top: 5px;">Ganesh Festival Event 2K25</h2>
+  <h2 style="text-align: center; margin-top: 5px;">We are thankful for <span style="color: red;">Lokseva Group</span> to sponsored <span style="color: red">Kurta.</span></h2>
+  <h2 style="text-align: center; margin-top: 5px;">We thanks <span style="color: rgb(255, 102, 0);">Mahesh Thorat Sir</span> and team.</h2>
   <marquee style="background-color: red;color: white;height: 25px;border-radius: 10px;">
     Developed & Designed by -> Abhishek Dhakne</marquee>
     <h2 style="text-align: center;">Amount received</h2>
@@ -113,4 +115,5 @@
 
 
 </body>
+
 </html>
